default/objects/WS_Summary_Formula__c/WS_Summary_Formula__c.object-meta.xml
<CustomObject>
    <label>Cross-Sell Summary Formula</label>
    <nameField>
        <displayFormat>WSSummaryFormula-{0000}</displayFormat>
        <label>WS Summary Formula Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross-Sell Summary Formulas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>