default/objects/WS_Summary_Formula__c/fields/Apply_To_All_Cross_Sell_Maps__c.field-meta.xml
<CustomField>
    <fullName>Apply_To_All_Cross_Sell_Maps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to apply this formula to all Cross-Sell maps</description>
    <inlineHelpText>Check this to apply this formula to all Cross-Sell maps</inlineHelpText>
    <label>Apply To All Cross-Sell Maps</label>
    <type>Checkbox</type>
</CustomField>