default/objects/WS_Summary_Formula__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Color RBG in the form of #rrggbb</description>
    <inlineHelpText>Color RBG in the form of #rrggbb</inlineHelpText>
    <label>Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>