default/objects/WS_Summary_Formula__c/fields/White_Space__c.field-meta.xml
<CustomField>
    <fullName>White_Space__c</fullName>
    <label>White Space</label>
    <referenceTo>White_Space__c</referenceTo>
    <relationshipLabel>Cross-Sell Summary Formulas</relationshipLabel>
    <relationshipName>Cross_Sell_Summary_Formulas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>