default/objects/WS_Summary_Formula__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Color__c</columns>
    <columns>Label__c</columns>
    <columns>Formula__c</columns>
    <columns>White_Space__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>